Warnings entfernt (#177)
- Unnötige import entfernt
- Raw Type warnings unterdrückt
- Zuweisung  von DBIterator an Liste nicht prüfen
- an SelectInput nur Listen übergeben
- einige new durch .valueOf ersetzt
- Endlosschleife 1==1 durch true ersetzt